# otrr

./: .editorconfig  Cargo.toml  README.md  otrr.code-workspace  signatures-dsa-changes.diff
docs/: EFD-Genus-1-large-characteristic-Edwards-curves.html  otrv4-0f844b03cb9b1d12f914044bb638ad1f0ac645f5.md
src/: ake.rs  authentication.rs  clientprofile.rs  crypto.rs  dake.rs  decoder.rs  encoding.rs  fragment.rs  host.rs  instancetag.rs  keymanager.rs  lib.rs  message.rs  message_tests_only.rs  messages.rs  protocol.rs  session.rs  smp.rs  smp4.rs  utils.rs  wire.rs
src/utils/std/: alloc.rs  bytes.rs  mod.rs  slice.rs  u32.rs
