[package]
name = "otrr"
version = "0.1.0"
authors = ["Danny van Heumen <danny@dannyvanheumen.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
base64 = "0.13.0"
hex = "0.4.2"
num = "0.3"
num-bigint = "0.3"
ring = "0.16.16"
aes-ctr = "0.6.0"
once_cell = "1.9"
bitflags = "1.3"