[package]
name = "otrr"
version = "0.1.0"
authors = ["Danny van Heumen <danny@dannyvanheumen.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
base64 = "0.13.0"
hex = "0.4.2"
num-integer = "0.1"
num-bigint = { package = "num-bigint-dig", version = "0.8" }
ring = "0.16.16"
aes-ctr = "0.6.0"
once_cell = "1.9"
bitflags = "1.3"
digest = "0.10"
# Requires changes according to `./signatures-dsa-changes.diff`.
#dsa = "0.4.0"
dsa = {path = "../signatures/dsa"}
sha-1 = "0.10"
sha2 = "0.10"
typenum = "1.15"
