[package]
name = "otrr"
version = "0.7.3"
authors = ["Danny van Heumen <danny@dannyvanheumen.nl>"]
edition = "2021"
description = "otrr — OTR protocol version 3 and 4"
readme = "README.md"
license = "LGPL-3.0-only"
repository = "https://github.com/cobratbq/otrr"
publish = ["crates-io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
regex = "1"
base64 = "0.13.0"
hex = "0.4.2"
num-integer = "0.1"
num-bigint = { package = "num-bigint-dig", version = "0.8", features = ["zeroize"] }
ring = "0.16.16"
aes-ctr = "0.6.0"
once_cell = "1.9"
bitflags = "1.3"
digest = "0.10"
dsa = "0.6"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
typenum = "1.15"
zeroize = "1.5"
chacha20 = "0.9"

[dev-dependencies]
env_logger = "0.9"

